# Minimal Linux smoke test: same TBB discovery/link pattern as pyslam/slam/cpp/CMakeLists.txt
cmake_minimum_required(VERSION 3.12)
project(tbb_smoke LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)

find_package(TBB REQUIRED)
if(TARGET TBB::tbb)
    set(TBB_LINK_LIBS TBB::tbb)
elseif(TBB_LIBRARIES)
    set(TBB_LINK_LIBS ${TBB_LIBRARIES})
else()
    find_library(TBB_LIB tbb PATHS ${TBB_ROOT}/lib ${TBB_ROOT}/lib64 /usr/lib /usr/local/lib)
    if(TBB_LIB)
        set(TBB_LINK_LIBS ${TBB_LIB})
    else()
        find_package(PkgConfig QUIET)
        if(PKG_CONFIG_FOUND)
            pkg_check_modules(TBB_PKG QUIET tbb)
            if(TBB_PKG_FOUND)
                set(TBB_LINK_LIBS ${TBB_PKG_LIBRARIES})
                if(NOT TBB_INCLUDE_DIRS)
                    set(TBB_INCLUDE_DIRS ${TBB_PKG_INCLUDE_DIRS})
                endif()
            endif()
        endif()
        if(NOT TBB_LINK_LIBS)
            message(FATAL_ERROR "TBB found but no libraries located")
        endif()
    endif()
endif()
if(TARGET TBB::tbb AND NOT TBB_INCLUDE_DIRS)
    get_target_property(_tbb_includes TBB::tbb INTERFACE_INCLUDE_DIRECTORIES)
    if(_tbb_includes)
        set(TBB_INCLUDE_DIRS ${_tbb_includes})
    endif()
endif()

add_executable(tbb_smoke main.cpp)
target_link_libraries(tbb_smoke PRIVATE ${TBB_LINK_LIBS})
if(TBB_INCLUDE_DIRS)
    target_include_directories(tbb_smoke PRIVATE ${TBB_INCLUDE_DIRS})
endif()
